--- a/src/sass/app/_profile.scss
+++ b/src/sass/app/_profile.scss
@@ -165,7 +165,7 @@ a.sn-link {
     border-width: 2px;
     padding: $snPadding - 1;
     span {
-      color: $primary;
+      color: $default-text;
     }
     i {
       background: $snColor;
