--- a/src/sass/theme/components/_msgCenter.scss
+++ b/src/sass/theme/components/_msgCenter.scss
@@ -118,7 +118,7 @@
     font-size: 12px;
     strong {
       float: left;
-      color: $default-text;
+      color: $dropdown-text;
     }
     & > a {
       float: right;
